--- a/SoftUniLiveDemo/Views/Home/Index.cshtml
+++ b/SoftUniLiveDemo/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-5 mt-5">Hello and Welcome to my Web Calculator</h1>
-    <p class="display-6">You can try it by going to the Calculator tab in the Navigation Bar</p>
-    <img src="~/undraw_calculator_re_alsc.svg" class="mt-5" />
+    <p class="h3">You can try it by going to the Calculator tab in the Navigation Bar</p>
+    <img src="~/undraw_calculator_re_alsc.svg" class="mt-5"/>
 </div>
