added some social medias

--- a/SoftUniLiveDemo/Views/Home/Feedback.cshtml
+++ b/SoftUniLiveDemo/Views/Home/Feedback.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Feedback";
+    ViewData["Title"] = "Socials";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-center mt-5">Here you can find my <span class="text-danger">@ViewData["Title"]</span></h1>
 
-<p>Feel free to rate me web application </p>
+<h2>Instagram</h2>
+<h2>Facebook</h2>
+<h2>Youtube</h2>
+<h2>Discord</h2>
 
