addes images and additionals

--- a/SoftUniLiveDemo/Views/Shared/_Layout.cshtml
+++ b/SoftUniLiveDemo/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link" asp-action="Calculator">Calculator</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-action="Feedback">Feedback</a>
+                            <a class="nav-link" asp-action="Socialmedias">Socials</a>
                         </li>
                     </ul>
                 </div>
@@ -45,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - SoftUniLiveDemo - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - SoftUniLiveDemo - <a asp-area="" asp-controller="Home" asp-action="Socialmedias">Socials</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
