--- a/SoftUniLiveDemo/Views/Shared/_Layout.cshtml
+++ b/SoftUniLiveDemo/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/SoftUniLiveDemo.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="icon" href="~/favicon.ico" />
 </head>
 <body>
     <header>
@@ -23,14 +24,21 @@
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link" asp-action="Index">
+                                <i class="bi bi-house"></i>
                                 Home
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-action="Calculator">Calculator</a>
+                            <a class="nav-link" asp-action="Calculator">
+                                <i class="bi bi-calculator-fill"></i>
+                                Calculator
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-action="Socialmedias">Socials</a>
+                            <a class="nav-link" asp-action="Socialmedias">
+                                <i class="bi bi-signal"></i>
+                                Socials
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -45,7 +53,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - SoftUniLiveDemo - <a asp-area="" asp-controller="Home" asp-action="Socialmedias">Socials</a>
+            &copy; 2023 - DenisWeb</span> - <a asp-area="" asp-controller="Home" asp-action="Socialmedias">Socials</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
