changed some stuff

--- a/SoftUniLiveDemo/Views/Home/Socialmedias.cshtml
+++ b/SoftUniLiveDemo/Views/Home/Socialmedias.cshtml
@@ -4,10 +4,9 @@
 <h1 class="text-center mt-5">Here you can find my <span class="text-danger">@ViewData["Title"]</span></h1>
 
 <div class="text-center mt-5">
-    <h2><a href="https://www.instagram.com/denis.ts384/"><i class="bi bi-instagram text-danger"></i> Instagram</h2></a>
-    <h2><a href="https://github.com/DenisBG312"><i class="bi bi-github"></i> Github</h2></a>
-    <h2><a href="https://www.facebook.com/denis.nedkov.3"><i class="bi bi-facebook text-info"></i> Facebook</h2></a>
-    <h2><a href="https://www.youtube.com/channel/UCPoxZ2mbf24-PTwJxrM54Zg"><i class="bi bi-youtube text-danger"></i> Youtube</h2></a>
+    <h2><i class="bi bi-instagram text-danger"></i> denis.ts384</h2>
+    <h2><i class="bi bi-github"></i> DenisBG312</h2>
+    <h2><i class="bi bi-facebook text-info"></i> denis.nedkov.3</h2>
     <h2><i class="bi bi-discord"></i> denka6700</h2></a>
 </div>
 
