--- a/SoftUniLiveDemo/Views/Home/Calculator.cshtml
+++ b/SoftUniLiveDemo/Views/Home/Calculator.cshtml
@@ -8,4 +8,4 @@
     <input type="submit" class="btn btn-primary mt-2" value="Submit" />
 </form>
 
-<h3 class="text-danger mt-4">Result: @ViewBag.Result</h3>
+<h3 class="text-danger mt-4 mb-5">Result: @ViewBag.Result</h3>
