--- a/SoftUniLiveDemo/Views/Shared/_Layout.cshtml
+++ b/SoftUniLiveDemo/Views/Shared/_Layout.cshtml
@@ -51,9 +51,53 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - DenisWeb</span> - <a asp-area="" asp-controller="Home" asp-action="Socialmedias">Socials</a>
+    <footer class="w-100 py-4 flex-shrink-0 bg-black mt-5 d-flex align-text-bottom text-danger">
+        <div class="container py-4">
+            <div class="row gy-4 gx-5">
+                <div class="col-lg-4 col-md-6">
+                    <h5 class="h1 text-danger">DenisWeb</h5>
+                    <p class="small text-white">This is a quick demonstration of a web calculator. Keep in mind the result is formatted with two signs after the number.</p>
+                    <p class="small text-white mb-0">&copy; Copyrights. All rights reserved. <a class="text-danger" href="#">DenisWeb</a></p>
+                </div>
+                <div class="col-lg-2 col-md-6">
+                    <h5 class="text-white mb-3">Quick links</h5>
+                    <ul class="list-unstyled text-white">
+                        <li class="footer">
+                            <a class="link-danger" asp-action="Index">Home</a>
+                        </li>
+                        <li class="footer">
+                            <a class="link-danger" asp-action="Calculator">Calculator</a>
+                        </li>
+                        <li class="footer">
+                            <a class="link-danger" asp-action="Socialmedias">Social Media</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6">
+                    <h5 class="text-white mb-3">Quick links</h5>
+                    <ul class="list-unstyled text-white">
+                        <li class="footer">
+                            <a class="link-danger" asp-action="Index">Home</a>
+                        </li>
+                        <li class="footer">
+                            <a class="link-danger" asp-action="Calculator">Calculator</a>
+                        </li>
+                        <li class="footer">
+                            <a class="link-danger" asp-action="Socialmedias">Social Media</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <h5 class="text-danger mb-3">Newsletter</h5>
+                    <p class="small text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                    <form action="#">
+                        <div class="input-group mb-3">
+                            <input class="form-control" type="text" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                            <button class="btn btn-primary" id="button-addon2" type="button"><i class="fas fa-paper-plane"></i></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
